Replace video uploads with social links
